--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML">
+        MathJax.Hub.Config({
+          "HTML-CSS": {
+            availableFonts: ["TeX"],
+          },
+          tex2jax: {
+            inlineMath: [['$','$'],["\\(","\\)"]]},
+            displayMath: [ ['$$','$$'], ['\[','\]'] ],
+          TeX: {
+            extensions: ["AMSmath.js", "AMSsymbols.js", "color.js"],
+            equationNumbers: {
+              autoNumber: "AMS"
+            }
+          },
+          showProcessingMessages: false,
+          messageStyle: "none",
+          imageFont: null,
+          "AssistiveMML": { disabled: true }
+        });
+      </script>
+  </head>
   {%- include head.html -%}
   <body>
     {%- include header.html -%}
